alignment fix

--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -49,4 +49,7 @@
         font-size: 1.5rem;
         margin-left: 1rem;
     }
+    .weather-info-block{
+        max-width: 175px;
+    }
   }
